plugins {
    id 'java'
    alias(libs.plugins.quarkus)
    alias(libs.plugins.lombok)
}

group = 'ch.nickl'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation platform(libs.quarkus.bom)

    implementation libs.quarkus.scheduler
    implementation libs.quarkus.arc
    implementation libs.quarkus.rest.client.jackson
    implementation libs.quarkus.logging.json
    implementation libs.quarkus.smallrye.context.propagation
    implementation libs.quarkus.smallrye.fault.tolerance

    implementation libs.mapstruct
    annotationProcessor libs.mapstruct.processor
    annotationProcessor libs.lombok.mapstruct.binding

    testImplementation libs.quarkus.junit5
    testImplementation libs.quarkus.junit5.mockito
    testImplementation libs.assertj.core
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    useJUnitPlatform()
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
}